<resources>
    <string name="app_name">Quero Apitar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Equipe Quero Apitar</string>
    <string name="nav_header_subtitle">suporte@queroapitar.com.br</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_minhas_partidas">Minhas Partidas</string>
    <string name="title_activity_partida">Partida</string>
    <string name="msg_notificacao">Você recebeu uma nova Mensagem.</string>

    <string name="nome_usuario">Nome do Usuário</string>
    <string name="email_usuario">E-mail do Usuário</string>
    <string name="username">User Name</string>

    <string name="menu_home">Home</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_historico_arbitro">Histórico Árbitro</string>
    <string name="menu_historico_partidas">Histórico de Partidas</string>
    <string name="menu_pagamento">Pagamento</string>
    <string name="menu_indicar_amigos">Indicar Amigos</string>
    <string name="menu_configuracao">Configuração</string>
    <string name="menu_configuracao_sem_titulo"></string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_sair">Sair</string>

    <!-- Componentes -->
    <string name="btn_logar">Entrar</string>
    <string name="btn_registrar_usuario">CONFIRMAR CADASTRO</string>
    <string name="btn_abrir_login">   Acesse aqui.</string>
    <string name="btn_criar_conta">Criar conta</string>
    <string name="btn_link_criar_conta">Criar conta</string>
    <string name="btn_solicitacao_apito">Enviar pedido</string>
    <string name="btn_convidar_arbitro">Convidar</string>
    <string name="edit_email_usuario">E-mail</string>
    <string name="edit_nome_usuario">Nome</string>
    <string name="edit_sobrenome_usuario">Sobrenome</string>
    <string name="edit_senha_usuario">Senha</string>
    <string name="lbl_bem_vindo">Bem vindo</string>
    <string name="radio_arbitro">Árbitro</string>
    <string name="radio_jogador">Jogador</string>
    <string name="radio_masculino">Masculino</string>
    <string name="radio_feminino">Feminino</string>
    <string name="txt_possui_cadastro">Ja possuí cadastro?  </string>
    <string name="usuarios_prompt">Selecione um tipo de usuário</string>

    <string name="txt_primeiro_esporte">Escolha o primeiro Esporte para qual deseja apitar partidas</string>
    <string name="txt_segundo_esporte">Escolha o segundo Esporte para qual deseja apitar partidas</string>
    <string name="txt_terceiro_esporte">Escolha o terceiro Esporte para qual deseja apitar partidas</string>

    <string name="txt_primeiro_valor">Valor referente ao primeiro esporte</string>
    <string name="txt_segundo_valor">Valor referente ao segundo esporte</string>
    <string name="txt_terceiro_valor">Valor referente ao terceiro esporte</string>

    <string name="recyclerview_vazia">Não há registro</string>


    <string-array name="usuarios_arrays">
        <item>Árbitro</item>
        <item>Jogador/Time</item>
        <item>Clube/Quadra de Esportes</item>
    </string-array>
    <string name="title_activity_perfil">PerfilActivity</string>

</resources>
