<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#29B329"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".CriarContaActivity">

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_bem_vindo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_bem_vindo"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textAlignment="center"/>

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:id="@+id/linear_tituloAPP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_ao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbl_bem_vindo"
            android:text="ao"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_titulo_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbl_ao"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:id="@+id/linearCampos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lblEmail"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#fff"
            android:theme="@style/LoginTextInputLayoutStyle"
            app:boxStrokeColor="#fff">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/edit_email_usuario"
                android:inputType="textWebEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lblNome"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#fff"
            android:theme="@style/LoginTextInputLayoutStyle"
            app:boxStrokeColor="#fff">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/edit_nome_usuario"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lblSobrenome"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#fff"
            android:theme="@style/LoginTextInputLayoutStyle"
            app:boxStrokeColor="#fff">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editSobrenome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/edit_sobrenome_usuario"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lblSenha"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblEmail"
            android:textColorHint="#fff"
            android:theme="@style/LoginTextInputLayoutStyle"
            app:passwordToggleEnabled="true"
            app:boxStrokeColor="#fff">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_twotone_lock_24px"
                android:ems="10"
                android:hint="@string/edit_senha_usuario"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp" />

    <LinearLayout
        android:id="@+id/linearRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/linearCampos"   >

        <RadioGroup
            android:id="@+id/radioGroupTipoUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioArbitro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_arbitro"
                android:layout_marginRight="150dp"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radioJogador"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:text="@string/radio_jogador" />

        </RadioGroup>


    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="25dp" />

    <LinearLayout
        android:id="@+id/linearBotaoRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearRadioGroup"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:onClick="CriarContaClick"
            android:text="@string/btn_registrar_usuario"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:background="@drawable/btn_border_circus"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_editor_absoluteY="316dp" />

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="25dp" />

    <LinearLayout
        android:id="@+id/linearBotaoAbrirLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearCampos"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtJaPossuiCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_possui_cadastro"
            android:textAlignment="viewEnd"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnAbreLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:background="#00FFFFFF"
            android:onClick="AbrirTelaLogin"
            android:text="@string/btn_abrir_login"
            android:textAllCaps="false"
            android:textAlignment="textStart" />

    </LinearLayout>

</LinearLayout>