<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#29B329"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="199dp"
            android:contentDescription="TODO"
            android:textAlignment="center"
            app:srcCompat="@drawable/logo2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/pBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginLeft="135dp"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:textAlignment="center">
        </ProgressBar>

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp" />

    <LinearLayout
        android:id="@+id/linearCamposLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lbl_email_usuario"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#fff"
            android:theme="@style/LoginTextInputLayoutStyle"
            app:boxStrokeColor="#fff">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_email_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/edit_email_usuario"
                android:inputType="textWebEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lbl_senha_usuario"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#fff"
            android:theme="@style/LoginTextInputLayoutStyle"
            app:passwordToggleEnabled="true"
            app:boxStrokeColor="#fff">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_senha_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/edit_senha_usuario"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="15dp" />

    <LinearLayout
        android:id="@+id/linearRadio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/linearCamposLogin" >

        <RadioGroup
            android:id="@+id/radioGroupTipoUsuarioLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioArbitroLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="150dp"
                android:checked="true"
                android:text="@string/radio_arbitro" />

            <RadioButton
                android:id="@+id/radioJogadorLogin"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:text="@string/radio_jogador" />

        </RadioGroup>


    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_logar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:onClick="LogarClick"
            android:text="@string/btn_logar"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:background="@drawable/btn_border_circus"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_editor_absoluteY="316dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_criar_conta"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:onClick="LinkCriarConta_click"
            android:text="@string/btn_criar_conta"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:background="#29B329"
            android:textAlignment="center"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" />


</LinearLayout>